@@ -3,59 +3,73 @@ def COLOR_MAP = [
     'FAILURE': 'danger',
     'UNSTABLE': 'danger'
 ]
+
 pipeline {
-  agent any
-  stages {
-    stage('Validate Project') {
-        steps {
-            sh 'mvn validate'
+    agent any
+
+    stages {
+        stage('Validate Project') {
+            steps {
+                sh 'mvn validate'
+            }
+        }
+
+        stage('Unit Test') {
+            steps {
+                sh 'mvn test'
+            }
+        }
+
+        stage('App Packaging | Build') {
+            steps {
+                sh 'mvn package'
+            }
+        }
+
+        stage('Integration Test') {
+            steps {
+                sh 'mvn verify -DskipUnitTests'
+            }
+        }
+
+        stage('Checkstyle Code Analysis') {
+            steps {
+                sh 'mvn checkstyle:checkstyle'
+            }
+        }
+
+        stage('SonarQube Inspection') {
+            steps {
+                sh """
+                    mvn sonar:sonar \
+                      -Dsonar.projectKey=Java-WebApp-Project \
+                      -Dsonar.host.url=http://172.31.90.222:9000 \
+                      -Dsonar.login=aa1ddb8c7f1ec76af8351ec177e473116f31a8f8 \
+                      -DargLine="--add-opens java.base/java.lang=ALL-UNNAMED"
+                """
+            }
+        }
+
+        stage('Upload Artifact To Nexus') {
+            steps {
+                sh 'mvn deploy'
+            }
+            post {
+                success {
+                    echo 'Successfully Uploaded Artifact to Nexus Artifactory'
+                }
+            }
         }
     }
-    stage('Unit Test'){
-        steps {
-            sh 'mvn test'
+
+    post {
+        always {
+            echo 'Slack Notifications.'
+            slackSend(
+                channel: '#jenkins-ci-pipeline-alerts-af', // update to your Slack channel
+                color: COLOR_MAP[currentBuild.currentResult],
+                message: "*${currentBuild.currentResult}:* Job Name '${env.JOB_NAME}' build ${env.BUILD_NUMBER} \n Build Timestamp: ${env.BUILD_TIMESTAMP} \n Project Workspace: ${env.WORKSPACE} \n More info at: ${env.BUILD_URL}"
+            )
         }
     }
-    stage('App Packaging | Build'){
-        steps {
-            sh 'mvn package'
-        }
-    }
-    stage('Integration Test'){
-        steps {
-            sh 'mvn verify -DskipUnitTests'
-        }
-    }
-    stage ('Checkstyle Code Analysis'){
-        steps {
-            sh 'mvn checkstyle:checkstyle'
-        }
-    }
-    stage('SonarQube Inspection') {
-        steps {
-            sh  """mvn sonar:sonar \
-                   -Dsonar.projectKey=Java-WebApp-Project \
-                   -Dsonar.host.url=http://172.31.90.222:9000 \
-                   -Dsonar.login=aa1ddb8c7f1ec76af8351ec177e473116f31a8f8"""
-        }
-    } 
-    stage("Upload Artifact To Nexus"){
-        steps{
-             sh 'mvn deploy'  
-        } 
-        post {
-            success {
-              echo 'Successfully Uploaded Artifact to Nexus Artifactory'
-        }
-      }
-    }
-  }
-  post {
-    always {
-        echo 'Slack Notifications.'
-        slackSend channel: '#jenkins-ci-pipeline-alerts-af', //update and provide your channel name
-        color: COLOR_MAP[currentBuild.currentResult],
-        message: "*${currentBuild.currentResult}:* Job Name '${env.JOB_NAME}' build ${env.BUILD_NUMBER} \n Build Timestamp: ${env.BUILD_TIMESTAMP} \n Project Workspace: ${env.WORKSPACE} \n More info at: ${env.BUILD_URL}"
-    }
-  }
 }
